[package]
name = "on_purpose_prototype_console_inquire"
version = "0.0.1"
edition = "2021"

[dependencies]
inquire = "0.6.0" #inquire is for building interactive prompts in terminals
tokio = { version = "1.32.0", features = ["full"] } #Added so I can use Surreal DB
surrealdb = "1.0.0-beta.11" #Added so I can store and persist data
surrealdb_extra = "0.3.1" #Added because I think using this for table definitions might save me time