[package]
name = "on_purpose_prototype_console_inquire"
version = "0.0.1"
edition = "2021"

[dependencies]
inquire = "0.6.0" #inquire is for building interactive prompts in terminals
tokio = { version = "1.32.0", features = ["full"] } #Added so I can use Surreal DB
surrealdb = { version = "1.0.0", features = ["kv-mem"] } #Added so I can store and persist data, kv-mem is an in memory database that is maybe not required in a not test build
surrealdb_extra = "0.3.1" #Added because I think using this for table definitions might save me time
serde = "1.0.188" #Implied to be required by surrealdb_extra's getting started documentation
futures = "0.3" #Recommended by the offical Rust Async book for async programming
